Extra pen issue resolved, and code reviewer comments fixed. 1-2 errors left Sprint 8

--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -36,7 +36,7 @@
 }
 
 .profile__edit-button {
-  background: transparent url(../images/edit-icon.svg) center no-repeat;
+  background: transparent;
   border-style: none;
   background-color: transparent;
   margin-top: 22px;
