--- a/src/blocks/page.css
+++ b/src/blocks/page.css
@@ -1,37 +1,25 @@
 .page {
-  max-width: 1280px;
-  font-family: "Inter", Arial, Arial, Helvetica, sans-serif;
-  margin-left: auto;
-  margin-right: auto;
-  padding-top: 45px;
-  padding-bottom: 60px;
-  background-color: black;
+  background-color: #000;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-size: 18px;
+  font-weight: 400;
+  margin: 0 auto;
+  color: white;
 }
-
-.page__section {
+.page__content {
   box-sizing: border-box;
   position: relative;
-  max-width: 880px;
-}
-
-.page__content {
-  margin-left: auto;
-  margin-right: auto;
+  max-width: 882px;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  max-width: 880px;
+  margin: 0 auto;
+  z-index: 0;
 }
-
-@media screen and (max-width: 1100px) {
-  .page__section {
+@media screen and (max-width: 920px) and (min-width: 321px) {
+  .page__content {
     margin: 0 20px;
     max-width: calc(100% - 40px);
-  }
-}
-
-@media screen and (max-width: 568px) {
-  .page {
-    padding: 28px 0 36px;
   }
 }
