--- a/src/blocks/popup.css
+++ b/src/blocks/popup.css
@@ -27,7 +27,7 @@
 }
 
 .popup__box {
-  width: 100%;
+  width: 330px;
   height: auto;
   background-color: rgb(255, 255, 255);
   border-radius: 10px;
