--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -82,7 +82,7 @@
   width: 150px;
   height: 50px;
   box-sizing: border-box;
-  background-image: url(../images/plus.svg);
+  background-image: url(../images/newplus.svg);
   background-position: center;
   background-repeat: no-repeat;
   background-color: transparent;
